--- a/container-tests/pom.xml
+++ b/container-tests/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
-      <groupId>org.jboss.forge</groupId>
-      <artifactId>forge-parent</artifactId>
+      <groupId>org.jboss.forge.furnace</groupId>
+      <artifactId>furnace-parent</artifactId>
       <version>2.0.0-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
@@ -22,9 +22,22 @@
          <scope>test</scope>
       </dependency>
       <dependency>
+         <groupId>org.jboss.forge.test</groupId>
+         <artifactId>forge-test-harness</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.jboss.forge.test</groupId>
+         <artifactId>arquillian-forge-classpath</artifactId>
+         <scope>test</scope>
+      </dependency>
+      
+      <!-- Addons to compliment tests -->
+      <dependency>
          <groupId>org.jboss.forge.addon</groupId>
          <artifactId>example</artifactId>
          <classifier>forge-addon</classifier>
+         <version>2.0.0-SNAPSHOT</version>
          <scope>test</scope>
       </dependency>
       <dependency>
@@ -46,16 +59,6 @@
          <artifactId>convert</artifactId>
          <classifier>forge-addon</classifier>
          <version>2.0.0-SNAPSHOT</version>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.jboss.forge.test</groupId>
-         <artifactId>forge-test-harness</artifactId>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.jboss.forge.test</groupId>
-         <artifactId>arquillian-forge-classpath</artifactId>
          <scope>test</scope>
       </dependency>
    </dependencies>
