--- a/proxy-tests/pom.xml
+++ b/proxy-tests/pom.xml
@@ -7,8 +7,8 @@
    <modelVersion>4.0.0</modelVersion>
 
    <parent>
-      <groupId>org.jboss.forge</groupId>
-      <artifactId>forge-parent</artifactId>
+      <groupId>org.jboss.forge.furnace</groupId>
+      <artifactId>furnace-parent</artifactId>
       <version>2.0.0-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
