--- a/se/pom.xml
+++ b/se/pom.xml
@@ -7,13 +7,12 @@
    <modelVersion>4.0.0</modelVersion>
 
    <parent>
-      <groupId>org.jboss.forge</groupId>
-      <artifactId>forge-parent</artifactId>
+      <groupId>org.jboss.forge.furnace</groupId>
+      <artifactId>furnace-parent</artifactId>
       <version>2.0.0-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
-   <groupId>org.jboss.forge.furnace</groupId>
    <artifactId>furnace-se</artifactId>
 
    <name>Furnace - Java SE UberJar Build</name>
