--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
             <module>proxy</module>
             <module>proxy-tests</module>
             <module>se</module>
+            <module>se-tests</module>
 
          </modules>
       </profile>
@@ -251,7 +252,7 @@
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
-               <version>2.5.1</version>
+               <version>2.8</version>
             </plugin>
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
