--- a/se-tests/pom.xml
+++ b/se-tests/pom.xml
@@ -41,5 +41,19 @@
          <version>2.0.0-SNAPSHOT</version>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>org.jboss.forge.addon</groupId>
+         <artifactId>addon-manager-spi</artifactId>
+         <classifier>forge-addon</classifier>
+         <version>2.0.0-SNAPSHOT</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.jboss.forge.addon</groupId>
+         <artifactId>maven-impl</artifactId>
+         <version>2.0.0-SNAPSHOT</version>
+         <scope>test</scope>
+      </dependency>
+
    </dependencies>
 </project>
