--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
             <version>${project.version}</version>
          </dependency>
          <dependency>
+            <groupId>org.jboss.forge.furnace</groupId>
+            <artifactId>furnace-manager</artifactId>
+            <version>${project.version}</version>
+         </dependency>
+         <dependency>
             <groupId>org.jboss.forge</groupId>
             <artifactId>forge-jboss-modules</artifactId>
             <version>${version.jboss.modules}</version>
