--- a/se-tests/pom.xml
+++ b/se-tests/pom.xml
@@ -18,24 +18,16 @@
          <scope>test</scope>
       </dependency>
       <dependency>
-         <groupId>org.jboss.forge.addon</groupId>
-         <artifactId>addon-manager-impl</artifactId>
-         <version>2.0.0-SNAPSHOT</version>
+         <groupId>org.jboss.forge.furnace</groupId>
+         <artifactId>furnace-manager</artifactId>
          <scope>test</scope>
       </dependency>
       <dependency>
          <groupId>org.jboss.forge.addon</groupId>
-         <artifactId>addon-manager-spi</artifactId>
+         <artifactId>maven</artifactId>
+         <version>2.0.0-SNAPSHOT</version>
          <classifier>forge-addon</classifier>
-         <version>2.0.0-SNAPSHOT</version>
          <scope>test</scope>
       </dependency>
-      <dependency>
-         <groupId>org.jboss.forge.addon</groupId>
-         <artifactId>maven-impl</artifactId>
-         <version>2.0.0-SNAPSHOT</version>
-         <scope>test</scope>
-      </dependency>
-
    </dependencies>
 </project>
