--- a/se-tests/pom.xml
+++ b/se-tests/pom.xml
@@ -23,10 +23,8 @@
          <scope>test</scope>
       </dependency>
       <dependency>
-         <groupId>org.jboss.forge.addon</groupId>
-         <artifactId>maven</artifactId>
-         <version>2.0.0-SNAPSHOT</version>
-         <classifier>forge-addon</classifier>
+         <groupId>org.jboss.forge.furnace</groupId>
+         <artifactId>furnace-manager-resolver-maven</artifactId>
          <scope>test</scope>
       </dependency>
    </dependencies>
