--- a/proxy-tests/pom.xml
+++ b/proxy-tests/pom.xml
@@ -33,6 +33,11 @@
       </dependency>
 
       <dependency>
+         <groupId>org.jboss.forge.furnace</groupId>
+         <artifactId>furnace-api</artifactId>
+         <scope>provided</scope>
+      </dependency>
+      <dependency>
          <groupId>org.jboss.forge.test</groupId>
          <artifactId>forge-test-harness</artifactId>
          <scope>test</scope>
