Created Maven 3.0.x version of the resolver for maven plugin compatibility

--- a/manager/resolver/pom.xml
+++ b/manager/resolver/pom.xml
@@ -13,6 +13,7 @@
    <packaging>pom</packaging>
    <modules>
       <module>maven</module>
+      <module>maven-3.0.x</module>
    </modules>
 </project>
 
