--- a/se/pom.xml
+++ b/se/pom.xml
@@ -15,7 +15,7 @@
 
    <artifactId>furnace-se</artifactId>
 
-   <name>Furnace - Java SE UberJar Build</name>
+   <name>Furnace - Embedded Container Build</name>
 
    <dependencies>
       <dependency>
@@ -34,13 +34,13 @@
          <scope>compile</scope>
       </dependency>
       <dependency>
-         <groupId>org.jboss.forge.test</groupId>
-         <artifactId>forge-test-harness</artifactId>
+         <groupId>org.jboss.forge.furnace.test</groupId>
+         <artifactId>furnace-test-harness</artifactId>
          <scope>test</scope>
       </dependency>
       <dependency>
-         <groupId>org.jboss.forge.test</groupId>
-         <artifactId>arquillian-forge-classpath</artifactId>
+         <groupId>org.jboss.forge.furnace.test</groupId>
+         <artifactId>arquillian-furnace-classpath</artifactId>
          <scope>test</scope>
       </dependency>
    </dependencies>
