--- a/test-harness/arquillian/classpath/pom.xml
+++ b/test-harness/arquillian/classpath/pom.xml
@@ -4,14 +4,14 @@
    <modelVersion>4.0.0</modelVersion>
 
    <parent>
-      <groupId>org.jboss.forge.test</groupId>
+      <groupId>org.jboss.forge.furnace.test</groupId>
       <artifactId>arquillian-forge-parent</artifactId>
       <version>2.0.0-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
-   <artifactId>arquillian-forge-classpath</artifactId>
-   <name>Forge - Arquillian Container Adapter - Classpath</name>
+   <artifactId>arquillian-furnace-classpath</artifactId>
+   <name>Furnace - Arquillian Container Adapter - Classpath</name>
 
    <dependencies>
       <dependency>
@@ -20,7 +20,7 @@
          <scope>compile</scope>
       </dependency>
       <dependency>
-         <groupId>org.jboss.forge.test</groupId>
+         <groupId>org.jboss.forge.furnace.test</groupId>
          <artifactId>arquillian-forge-core</artifactId>
          <scope>compile</scope>
       </dependency>
