--- a/test-harness/arquillian/core/pom.xml
+++ b/test-harness/arquillian/core/pom.xml
@@ -4,14 +4,14 @@
    <modelVersion>4.0.0</modelVersion>
 
    <parent>
-      <groupId>org.jboss.forge.test</groupId>
+      <groupId>org.jboss.forge.furnace.test</groupId>
       <artifactId>arquillian-forge-parent</artifactId>
       <version>2.0.0-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
    <artifactId>arquillian-forge-core</artifactId>
-   <name>Forge - Arquillian Container Adapter - Core</name>
+   <name>Furnace - Arquillian Container Adapter - Core</name>
 
    <dependencies>
       <dependency>
