--- a/test-harness/pom.xml
+++ b/test-harness/pom.xml
@@ -8,11 +8,11 @@
       <version>2.0.0-SNAPSHOT</version>
    </parent>
 
-   <groupId>org.jboss.forge.test</groupId>
-   <artifactId>forge-test-parent</artifactId>
+   <groupId>org.jboss.forge.furnace.test</groupId>
+   <artifactId>furnace-test-parent</artifactId>
    <packaging>pom</packaging>
 
-   <name>Forge - Test Harness Parent</name>
+   <name>Furnace - Test Harness Parent</name>
 
    <licenses>
       <license>
@@ -69,19 +69,19 @@
 
          <!-- Test Harneses Dependencies -->
          <dependency>
-            <groupId>org.jboss.forge.test</groupId>
-            <artifactId>forge-test-harness</artifactId>
+            <groupId>org.jboss.forge.furnace.test</groupId>
+            <artifactId>furnace-test-harness</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
          </dependency>
          <dependency>
-            <groupId>org.jboss.forge.test</groupId>
-            <artifactId>arquillian-forge-classpath</artifactId>
+            <groupId>org.jboss.forge.furnace.test</groupId>
+            <artifactId>arquillian-furnace-classpath</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
          </dependency>
          <dependency>
-            <groupId>org.jboss.forge.test</groupId>
+            <groupId>org.jboss.forge.furnace.test</groupId>
             <artifactId>arquillian-forge-core</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
