--- a/test-harness/test-harness/pom.xml
+++ b/test-harness/test-harness/pom.xml
@@ -1,15 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
-      <artifactId>forge-test-parent</artifactId>
-      <groupId>org.jboss.forge.test</groupId>
+      <artifactId>furnace-test-parent</artifactId>
+      <groupId>org.jboss.forge.furnace.test</groupId>
       <version>2.0.0-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
-   <artifactId>forge-test-harness</artifactId>
+   <artifactId>furnace-test-harness</artifactId>
    
-   <name>Forge - Test Harness</name>
+   <name>Furnace - Test Harness</name>
 
    <dependencies>
       <!-- Arquillian Deps -->
