--- a/manager/resolver/maven/pom.xml
+++ b/manager/resolver/maven/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
       <groupId>org.jboss.forge.furnace</groupId>
@@ -40,6 +41,12 @@
          <groupId>org.apache.maven</groupId>
          <artifactId>maven-aether-provider</artifactId>
          <version>${maven.version}</version>
+         <exclusions>
+            <exclusion>
+               <groupId>org.eclipse.sisu</groupId>
+               <artifactId>org.eclipse.sisu.plexus</artifactId>
+            </exclusion>
+         </exclusions>
       </dependency>
       <dependency>
          <groupId>org.eclipse.aether</groupId>
