Moved mock classes to main folder

--- a/proxy-tests/pom.xml
+++ b/proxy-tests/pom.xml
@@ -21,21 +21,20 @@
       <dependency>
          <groupId>org.jboss.forge.furnace</groupId>
          <artifactId>furnace-proxy</artifactId>
-         <scope>test</scope>
+         <scope>provided</scope>
       </dependency>
-
       <dependency>
          <groupId>cglib</groupId>
          <artifactId>cglib-nodep</artifactId>
          <version>2.2.2</version>
-         <scope>test</scope>
+         <scope>provided</scope>
       </dependency>
-
       <dependency>
          <groupId>org.jboss.forge.furnace</groupId>
          <artifactId>furnace-api</artifactId>
          <scope>provided</scope>
       </dependency>
+      
       <dependency>
          <groupId>org.jboss.forge.furnace.test</groupId>
          <artifactId>furnace-test-harness</artifactId>
