--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -57,6 +57,11 @@
          <artifactId>furnace-manager-spi</artifactId>
          <scope>compile</scope>
       </dependency>
+      <dependency>
+         <groupId>org.jboss.forge.furnace</groupId>
+         <artifactId>furnace-manager-resolver-maven</artifactId>
+         <scope>compile</scope>
+      </dependency>
    </dependencies>
 
    <build>
