--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -70,15 +70,9 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-plugin-plugin</artifactId>
             <configuration>
-               <goalPrefix>forge</goalPrefix>
+               <goalPrefix>furnace</goalPrefix>
             </configuration>
             <executions>
-               <execution>
-                  <id>generated-helpmojo</id>
-                  <goals>
-                     <goal>helpmojo</goal>
-                  </goals>
-               </execution>
                <execution>
                   <id>mojo-descriptor</id>
                   <goals>
