--- a/test-harness/arquillian/core/pom.xml
+++ b/test-harness/arquillian/core/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
    <parent>
@@ -20,6 +21,28 @@
       <dependency>
          <groupId>org.jboss.forge.furnace</groupId>
          <artifactId>furnace-manager</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.jboss.forge.furnace</groupId>
+         <artifactId>furnace-manager-resolver-maven</artifactId>
+         <scope>compile</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.maven</groupId>
+         <artifactId>maven-core</artifactId>
+         <version>3.1.0</version>
+         <exclusions>
+            <!-- Conflicts with Weld's Guava 13 -->
+            <exclusion>
+               <artifactId>sisu-guava</artifactId>
+               <groupId>org.sonatype.sisu</groupId>
+            </exclusion>
+         </exclusions>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.maven</groupId>
+         <artifactId>maven-compat</artifactId>
+         <version>3.1.0</version>
       </dependency>
       <dependency>
          <groupId>junit</groupId>
