Exception types in tests are properly enhanced via CLAC

--- a/test-harness/arquillian/core/pom.xml
+++ b/test-harness/arquillian/core/pom.xml
@@ -19,6 +19,10 @@
       </dependency>
       <dependency>
          <groupId>org.jboss.forge.furnace</groupId>
+         <artifactId>furnace-proxy</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.jboss.forge.furnace</groupId>
          <artifactId>furnace-manager</artifactId>
       </dependency>
       <dependency>
