--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ target/
 *.iml
 *.ipr
 *.iws
+*.swp
 /*/src/main/java/META-INF
 .gitignore.swp
 docs/reference/src/main/docbook/en-US/version_info.xml
