--- a/pom.xml
+++ b/pom.xml
@@ -343,9 +343,12 @@
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
-               <version>2.12</version>
+               <version>2.16</version>
                <configuration>
                   <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m</argLine>
+                  <systemProperties>
+                     <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
+                  </systemProperties>
                </configuration>
             </plugin>
 
