--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
    <groupId>org.jboss.forge.furnace</groupId>
    <artifactId>furnace-parent</artifactId>
-   <version>2.0.0-SNAPSHOT</version>
+   <version>2.0.0.Alpha13</version>
    <packaging>pom</packaging>
 
    <name>Furnace - Parent</name>
@@ -405,7 +405,7 @@
       <connection>${forge.scm.connection}</connection>
       <developerConnection>${forge.developer.connection}</developerConnection>
       <url>${forge.scm.url}</url>
-      <tag>HEAD</tag>
+      <tag>2.0.0.Alpha13</tag>
    </scm>
 </project>
 
