--- a/container/pom.xml
+++ b/container/pom.xml
@@ -31,8 +31,8 @@
          <artifactId>xml-parser</artifactId>
       </dependency>
       <dependency>
-         <groupId>org.jboss.forge</groupId>
-         <artifactId>forge-jboss-modules</artifactId>
+         <groupId>org.jboss.modules</groupId>
+         <artifactId>jboss-modules</artifactId>
       </dependency>
       <dependency>
          <groupId>org.jboss.forge.furnace</groupId>
