Memory leak should be fixed

--- a/container-api/pom.xml
+++ b/container-api/pom.xml
@@ -11,6 +11,6 @@
 
    <artifactId>furnace-api</artifactId>
 
-   <name>Furnace - Addon Container API</name>
+   <name>Furnace - Runtime API</name>
 
 </project>
