--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
       <forge.release.codename>Fire it Up</forge.release.codename>
       <forge.release.version>${project.version}</forge.release.version>
       <version.javassist>1</version.javassist>
-      <version.jboss.modules>1.3.0.Final</version.jboss.modules>
+      <version.jboss.modules>1.3.0.Final-forge</version.jboss.modules>
       <version.junit>4.11</version.junit>
       <version.org.jboss.logmanager.jboss-logmanager>1.4.1.Final</version.org.jboss.logmanager.jboss-logmanager>
       <version.surefire.plugin>2.16</version.surefire.plugin>
@@ -120,7 +120,7 @@
             <version>${project.version}</version>
          </dependency>
          <dependency>
-            <groupId>org.jboss.modules</groupId>
+            <groupId>org.jboss.forge</groupId>
             <artifactId>jboss-modules</artifactId>
             <version>${version.jboss.modules}</version>
          </dependency>
