--- a/manager/impl/pom.xml
+++ b/manager/impl/pom.xml
@@ -3,7 +3,7 @@
    <parent>
       <groupId>org.jboss.forge.furnace</groupId>
       <artifactId>furnace-manager-parent</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0.Beta3</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
