--- a/manager/resolver/maven/pom.xml
+++ b/manager/resolver/maven/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
       <groupId>org.jboss.forge.furnace</groupId>
@@ -8,8 +9,8 @@
    <artifactId>furnace-manager-resolver-maven</artifactId>
    <name>Furnace - Manager Maven Resolver</name>
    <properties>
-      <aether.version>0.9.0.M2</aether.version>
-      <maven.version>3.2.3</maven.version>
+      <aether.version>1.0.0.v20140518</aether.version>
+      <maven.version>3.2.5</maven.version>
    </properties>
 
    <dependencies>
@@ -40,37 +41,31 @@
          <groupId>org.apache.maven</groupId>
          <artifactId>maven-aether-provider</artifactId>
          <version>${maven.version}</version>
-         <exclusions>
-            <exclusion>
-               <groupId>org.eclipse.sisu</groupId>
-               <artifactId>org.eclipse.sisu.plexus</artifactId>
-            </exclusion>
-         </exclusions>
       </dependency>
       <dependency>
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
-         <version>10.0.1</version>
+         <version>18.0</version>
       </dependency>
       <dependency>
          <groupId>org.eclipse.aether</groupId>
-         <artifactId>aether-connector-file</artifactId>
+         <artifactId>aether-connector-basic</artifactId>
          <version>${aether.version}</version>
       </dependency>
       <dependency>
          <groupId>org.eclipse.aether</groupId>
-         <artifactId>aether-connector-wagon</artifactId>
+         <artifactId>aether-transport-wagon</artifactId>
          <version>${aether.version}</version>
       </dependency>
       <dependency>
          <groupId>org.apache.maven.wagon</groupId>
          <artifactId>wagon-http-lightweight</artifactId>
-         <version>2.4</version>
+         <version>2.8</version>
       </dependency>
       <dependency>
          <groupId>org.apache.maven.wagon</groupId>
          <artifactId>wagon-file</artifactId>
-         <version>2.4</version>
+         <version>2.8</version>
       </dependency>
       <dependency>
          <groupId>org.apache.maven</groupId>
