--- a/test-harness/arquillian/core/pom.xml
+++ b/test-harness/arquillian/core/pom.xml
@@ -11,6 +11,10 @@
 
    <artifactId>arquillian-forge-core</artifactId>
    <name>Furnace - Arquillian Container Adapter - Core</name>
+   <properties>
+      <version.maven>3.2.5</version.maven>
+   </properties>
+   
 
    <dependencies>
       <dependency>
@@ -33,12 +37,12 @@
       <dependency>
          <groupId>org.apache.maven</groupId>
          <artifactId>maven-core</artifactId>
-         <version>3.2.3</version>
+         <version>${version.maven}</version>
       </dependency>
       <dependency>
          <groupId>org.apache.maven</groupId>
          <artifactId>maven-compat</artifactId>
-         <version>3.2.3</version>
+         <version>${version.maven}</version>
       </dependency>
       <dependency>
          <groupId>junit</groupId>
