--- a/test-harness/arquillian/classpath/pom.xml
+++ b/test-harness/arquillian/classpath/pom.xml
@@ -4,7 +4,7 @@
 
    <parent>
       <groupId>org.jboss.forge.furnace.test</groupId>
-      <artifactId>arquillian-forge-parent</artifactId>
+      <artifactId>arquillian-furnace-parent</artifactId>
       <version>2.14.1-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
@@ -20,7 +20,7 @@
       </dependency>
       <dependency>
          <groupId>org.jboss.forge.furnace.test</groupId>
-         <artifactId>arquillian-forge-core</artifactId>
+         <artifactId>arquillian-furnace-core</artifactId>
          <scope>compile</scope>
       </dependency>
    </dependencies>
