--- a/test-harness/arquillian/core/pom.xml
+++ b/test-harness/arquillian/core/pom.xml
@@ -4,12 +4,12 @@
 
    <parent>
       <groupId>org.jboss.forge.furnace.test</groupId>
-      <artifactId>arquillian-forge-parent</artifactId>
+      <artifactId>arquillian-furnace-parent</artifactId>
       <version>2.14.1-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
-   <artifactId>arquillian-forge-core</artifactId>
+   <artifactId>arquillian-furnace-core</artifactId>
    <name>Furnace - Arquillian Container Adapter - Core</name>
    <properties>
       <version.maven>3.2.5</version.maven>
