--- a/test-harness/pom.xml
+++ b/test-harness/pom.xml
@@ -80,7 +80,7 @@
          </dependency>
          <dependency>
             <groupId>org.jboss.forge.furnace.test</groupId>
-            <artifactId>arquillian-forge-core</artifactId>
+            <artifactId>arquillian-furnace-core</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
          </dependency>
