--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
       <forge.scm.url>http://github.com/forge/furnace</forge.scm.url>
       <forge.release.codename>Fire it Up</forge.release.codename>
       <forge.release.version>${project.version}</forge.release.version>
-      <version.javassist>2</version.javassist>
+      <version.javassist>3.22.0-GA</version.javassist>
       <version.jboss.modules>1.3.1.Final-forge</version.jboss.modules>
       <version.junit>4.11</version.junit>
       <version.org.jboss.logmanager.jboss-logmanager>2.0.4.Final</version.org.jboss.logmanager.jboss-logmanager>
@@ -120,8 +120,8 @@
             <version>${version.jboss.modules}</version>
          </dependency>
          <dependency>
-            <groupId>org.jboss.forge</groupId>
-            <artifactId>forge-javassist</artifactId>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
             <version>${version.javassist}</version>
             <scope>compile</scope>
          </dependency>
