Add JAXB classes to make the test compile in JDK 11

--- a/container-tests/pom.xml
+++ b/container-tests/pom.xml
@@ -32,6 +32,13 @@
          <artifactId>arquillian-furnace-classpath</artifactId>
          <scope>test</scope>
       </dependency>
+      <!-- Needed for JAXBLookupTest -->
+      <dependency>
+         <groupId>javax.xml.bind</groupId>
+         <artifactId>jaxb-api</artifactId>
+         <version>2.3.0</version>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
 
    <build>
