--- a/container/pom.xml
+++ b/container/pom.xml
@@ -47,6 +47,9 @@
          <groupId>org.jboss.logmanager</groupId>
          <artifactId>jboss-logmanager</artifactId>
       </dependency>
-
+      <dependency>
+         <groupId>io.smallrye.common</groupId>
+         <artifactId>smallrye-common-io</artifactId>
+      </dependency>
    </dependencies>
 </project>
